# OOP

./: CMakeLists.txt  back.txt  circular_buffer.cpp  circular_buffer.h  hello_test.cc  life.cpp  main  main.cpp  tests.cpp
.cache/clangd/index/: circular_buffer.cpp.11B899EF5B755C03.idx  circular_buffer.cpp.A56D6AA470FB643E.idx  circular_buffer.h.10AA804DD48489CC.idx  circular_buffer.h.EA94DBDC978B5073.idx  hello_test.cc.7E27B010178D45FE.idx  main.cpp.CB645EAF9EC0D74D.idx  main.cpp.E4F1D7DA0523831D.idx  tests.cpp.FDA2C92D07B40546.idx
circular_buffer/: CMakeLists.txt  circular_buffer.cpp  circular_buffer.h
client/: CMakeLists.txt  client.cpp  client.h  i_execute.h  i_request.h
console_process_classes/: CMakeLists.txt  console_input_processor.cpp  console_input_processor.h  console_output_compiler.cpp  console_output_compiler.h  i_input_processor.h  i_output_compiler.h
game_space_classes/: CMakeLists.txt  field.cpp  field.h  universe.cpp  universe.h
utils/: CMakeLists.txt  exceptions.cpp  exceptions.h  game_commands.h  i_suggestion.h  parse_answer_struct.h  suggestions.cpp  suggestions.h
workers/: CMakeLists.txt  file_handler.cpp  file_handler.h  helper.cpp  helper.h  i_initialize_info.h  i_save_info.h  iterator.cpp  iterator.h  statistic.cpp  statistics.cpp  statistics.h
